@@ -14,6 +14,7 @@ import org.springframework.web.bind.annotation.*;
 
 import javax.servlet.http.HttpSession;
 import java.io.*;
+import java.security.MessageDigest;
 import java.text.SimpleDateFormat;
 import java.util.*;
 
@@ -62,7 +63,6 @@ class Param {
         } else {
             tag = "+" + newlabel;
         }
-
         if (type == 1) {
             String[] keylist = keywords.trim().split("\\+");
             keywords = "%";
@@ -82,6 +82,8 @@ class Param {
 class ResponseEntity {
     public String since_id;
     public String weibo_content;
+    public String create_time;
+    public String tag;
 
     public ResponseEntity() {
     }
@@ -89,6 +91,15 @@ class ResponseEntity {
     public ResponseEntity(String id, String content) {
         since_id = id;
         weibo_content = content;
+        create_time=null;
+        tag=null;
+    }
+
+    public ResponseEntity(DataLabelInfo dataLabelInfo) {
+        since_id=dataLabelInfo.getKey().getSince_id();
+        weibo_content=dataLabelInfo.getWeibo_content();
+        create_time=dataLabelInfo.getCreate_time();
+        tag=dataLabelInfo.getKey().getTag();
     }
 }
 
@@ -96,33 +107,32 @@ class ResponseEntity {
 class DataLabelResponse {
 
     public List<ResponseEntity> dataset;
-    public int success_count;
     public int response_code;
     public int page;
+    public String response_str;
 
     public DataLabelResponse() {
         dataset = new ArrayList<ResponseEntity>();
         //成功处理的微博数量
-        success_count = 0;
         //0：成功    -1：失败    1：成功但是到达了最后一页    -2:新建标签出现重复  -3:(父)标签不存在，或者已经被删除
         response_code = 0;
         //前端维护自己在后台的分页，初始为0
         page = 0;
+        response_str="";
     }
 }
 
 //前端界面的初始化，返回的参数实体，包括现在已有的标签
 //标签:true 表示是root标签  false表示非root标签
 class LabelInitResponse {
-    public Map<String,Boolean> all_label;
+    public Map<String,String> all_label;
     public List<String> all_dbnames;
     public List<String> comment_content;
 
     public LabelInitResponse() {
         all_dbnames=new ArrayList<String>();
-        all_label = new HashMap<String,Boolean>();
+        all_label = new HashMap<String,String>();
         comment_content=new ArrayList<String>();
-
     }
 }
 
@@ -178,28 +188,53 @@ public class DataLabelController {
 
     /**
      * 处理前端页面的初始化请求
+     * init_type：用于区分不同类型的初始化。0:返回所有的标签关系，1：标签关系和所有原始表名，2：标签关系和所有的语料库名，-1：标签的训练时间
      */
     @GetMapping("/Initservice")
     @ResponseBody
-    public String returnInit(@RequestParam("get_dbname_type") int get_dbname_type) {
+    public String returnInit(@RequestParam("init_type") int init_type) {
         List<LabelRelationInfo> all_labels = (List<LabelRelationInfo>) labelRelationInfoDAO.findAll();
         LabelInitResponse labelInitResponse = new LabelInitResponse();
         //返回标签以及是否是root标签,去掉空标签
-        for (int i = 0; i < all_labels.size(); i++) {
-            String clabel = all_labels.get(i).getChild_label().trim();
-            String plabel = all_labels.get(i).getParent_label().trim();
-            boolean isroot = false;
-            if(plabel.length()<=0)
-                isroot=true;
-            if(clabel.length()>0) {
-                labelInitResponse.all_label.put(clabel, isroot);
+        if(init_type>=0) {//返回标签关系
+            for (int i = 0; i < all_labels.size(); i++) {
+                String clabel = all_labels.get(i).getChild_label().trim();
+                String plabel = all_labels.get(i).getParent_label().trim();
+                String isroot = "child";
+                if (plabel.length() <= 0)
+                    isroot = "root";
+                if (clabel.length() > 0) {
+                    labelInitResponse.all_label.put(clabel, isroot);
+                }
+            }
+        }
+        if(init_type==-1){//返回标签的训练时间
+            for (int i = 0; i < all_labels.size(); i++) {
+                String clabel = all_labels.get(i).getChild_label().trim();
+                if(clabel.length()<=0)
+                    continue;
+                String md5=getMD5(clabel);
+                logger.info("------------>>>>>>>>>"+clabel+" "+md5);
+                String modeldir=rootdir+model_path;
+                File file=new File(modeldir+"xgb_"+md5);
+                if(!file.exists()){
+                    labelInitResponse.all_label.put(clabel,"no");
+                }else {
+                    Calendar cal = Calendar.getInstance();
+                    long time = file.lastModified();
+                    SimpleDateFormat formatter = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+                    cal.setTimeInMillis(time);
+                    labelInitResponse.all_label.put(clabel,formatter.format(cal.getTime()));
+
+                }
+
+
             }
         }
         //返回数据库的可选表名以及表注释
         //type=1  返回原始数据表
-        if(get_dbname_type>0)
+        if(init_type>0)
         {
-            logger.info("``````````````````````"+get_dbname_type);
             List<TableInfo> tableInfos = tableInfoDAO.findTableAndComment();
             for(int j=0;j<tableInfos.size();j++)
             {
@@ -207,7 +242,7 @@ public class DataLabelController {
                 String comment=tableInfos.get(j).getTable_comment().trim();
                 String[] fname = name.split("_");
                 //type=1  返回原始数据表
-                if(get_dbname_type==1) {
+                if(init_type==1) {
                     if(fname[0].trim().equals(Data_table_prefix))
                     {
                         labelInitResponse.all_dbnames.add(name);
@@ -215,7 +250,7 @@ public class DataLabelController {
                     }
                 }
                 //type=2  返回标注数据表
-                else if(get_dbname_type==2) {
+                else if(init_type==2) {
                     if(fname[0].trim().equals(Label_table_prefix))
                     {
                         labelInitResponse.all_dbnames.add(name);
@@ -228,6 +263,58 @@ public class DataLabelController {
         Gson gson = new Gson();
         return gson.toJson(labelInitResponse);
     }
+
+        /**
+         * 生成md5
+         *
+         * @param message
+         * @return
+         */
+        public static String getMD5(String message) {
+            String md5str = "";
+            try {
+                // 1 创建一个提供信息摘要算法的对象，初始化为md5算法对象
+                MessageDigest md = MessageDigest.getInstance("MD5");
+
+                // 2 将消息变成byte数组
+                byte[] input = message.getBytes();
+
+                // 3 计算后获得字节数组,这就是那128位了
+                byte[] buff = md.digest(input);
+
+                // 4 把数组每一字节（一个字节占八位）换成16进制连成md5字符串
+                md5str = bytesToHex(buff);
+
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+            return md5str;
+        }
+
+        /**
+         * 二进制转十六进制
+         *
+         * @param bytes
+         * @return
+         */
+        public static String bytesToHex(byte[] bytes) {
+            StringBuffer md5str = new StringBuffer();
+            // 把数组每一字节换成16进制连成md5字符串
+            int digital;
+            for (int i = 0; i < bytes.length; i++) {
+                digital = bytes[i];
+
+                if (digital < 0) {
+                    digital += 256;
+                }
+                if (digital < 16) {
+                    md5str.append("0");
+                }
+                md5str.append(Integer.toHexString(digital));
+            }
+            return md5str.toString().toLowerCase();
+        }
+
 
     /**
      * 处理搜索请求
@@ -245,17 +332,22 @@ public class DataLabelController {
         Param param = new Param(keywords, dbname, selecttime, timestart, timeend, selectoldlabel, oldlabel, newlabel, type, selectkey, page,parentlabel,ischildlabel);
         logger.info(param.keywords);
         logger.info(param.tag+"---->>>");
-
-        //对数据库搜索页和新浪微博搜索页的请求分开处理
-        if (type == 1)//数据库搜索页
-        {
-            dataLabelResponse = search_db(param, session);
-        } else if (type == 0)//新浪搜索
-        {
-            search_sina(param,session);
-        }
-
         Gson gson = new Gson();
+        //对数据库搜索页和新浪微博搜索页的请求分开处理
+        try {
+            if (type == 1)//数据库搜索页
+            {
+                dataLabelResponse = search_db(param, session);
+            } else if (type == 0)//新浪搜索
+            {
+                search_sina(param, session);
+            }
+        }catch (Exception e){
+            e.printStackTrace();
+            dataLabelResponse.dataset=null;
+            dataLabelResponse.response_code=-1;
+            dataLabelResponse.response_str="服务器异常!";
+        }
         logger.info(session.getId());
         return gson.toJson(dataLabelResponse);
     }
@@ -280,8 +372,8 @@ public class DataLabelController {
             tag = "+"+ oldlabel.trim();
             if(!labelRelationInfoDAO.exists(oldlabel))//收到了一个不存在的已有标签
             {
-                dataLabelResponse.success_count =  0;
                 dataLabelResponse.response_code = -3;
+                dataLabelResponse.response_str="标签不存在!可能已被删除！\n成功标注数量:0";
                 Gson gson = new Gson();
                 return gson.toJson(dataLabelResponse);
             }
@@ -294,8 +386,8 @@ public class DataLabelController {
         if (ischildlabel) {
             _parent=parentlabel.trim();
             if(!labelRelationInfoDAO.exists(_parent)){//收到了不存在的父标签
-                dataLabelResponse.success_count =  0;
                 dataLabelResponse.response_code = -3;
+                dataLabelResponse.response_str="父标签不存在!可能已被删除！\n成功标注数量:0";
                 Gson gson = new Gson();
                 return gson.toJson(dataLabelResponse);
             }
@@ -306,8 +398,8 @@ public class DataLabelController {
             String _par = labelRelationInfoDAO.findParent(_child);
             if (_par!=null && !_par.equals(_parent))//新建标签重复
             {
-                dataLabelResponse.success_count = 0;
                 dataLabelResponse.response_code = -2;
+                dataLabelResponse.response_str="新建标签重复！\n成功标注数量:0";
                 Gson gson = new Gson();
                 return gson.toJson(dataLabelResponse);
             }
@@ -356,14 +448,14 @@ public class DataLabelController {
                         //插入新标签时，标签已经存在并且和新标签不同，报标签重复错误
                         if(!par.equals(_parent)) {
                             e.printStackTrace();
-                            dataLabelResponse.success_count = 0;
                             dataLabelResponse.response_code = -2;
+                            dataLabelResponse.response_str="新建标签重复！\n成功标注数量:"+count;
                             Gson gson = new Gson();
                             return gson.toJson(dataLabelResponse);
                         }
                         e.printStackTrace();
-                        dataLabelResponse.success_count = 0;
                         dataLabelResponse.response_code = -1;
+                        dataLabelResponse.response_str="服务器异常！\n成功标注数量:"+count;
                         Gson gson = new Gson();
                         return gson.toJson(dataLabelResponse);
                     }
@@ -374,8 +466,8 @@ public class DataLabelController {
 //               dataLabelInfoDAO.save(infos);
         } catch (Exception e) {
             e.printStackTrace();
-            dataLabelResponse.success_count = count;
             dataLabelResponse.response_code = -1;
+            dataLabelResponse.response_str="服务器异常！\n成功标注数量:"+count;
             Gson gson = new Gson();
             return gson.toJson(dataLabelResponse);
         }
@@ -384,13 +476,16 @@ public class DataLabelController {
 
         Gson gson=new Gson();
         dataLabelResponse=gson.fromJson(dataSelect(keywords, dbname, selecttime, timestart, timeend, selectoldlabel, oldlabel, newlabel, type, page,selectkey,parentlabel,ischildlabel,session),DataLabelResponse.class);
-        dataLabelResponse.success_count = count;
+        if(dataLabelResponse.response_code==0)
+            dataLabelResponse.response_str="标注成功！成功标注数量:"+count;
+        else if(dataLabelResponse.response_code==1)
+            dataLabelResponse.response_str="已经到达最后一页！\n标注成功！成功标注数量:"+count;
+        return gson.toJson(dataLabelResponse);
         //查询下一批数据
 //        dataLabelResponse = search_db(dbname, dbquery, selecttime, timestart, timeend, tag, page, session);
 //
 //
 //        Gson gson = new Gson();
-        return gson.toJson(dataLabelResponse);
 
     }
 
@@ -418,7 +513,7 @@ public class DataLabelController {
     /**
      * 处理微博爬取请求
      */
-    public DataLabelResponse search_sina(Param param,HttpSession session) throws IOException {
+    public DataLabelResponse search_sina(Param param,HttpSession session) throws Exception {
         get_sina_weibo(param,session.getId());//爬虫结果写入数据库
         DataLabelResponse dataLabelResponse = new DataLabelResponse();
        return dataLabelResponse;
@@ -429,24 +524,38 @@ public class DataLabelController {
     /**
      * 使用命令行调用python，将结果写入到文件中
      */
-    public void exec_cmd(String command) throws IOException {
-        Process p = Runtime.getRuntime().exec(command);//需要检查是否出错
-        BufferedReader br = new BufferedReader(new InputStreamReader(p.getErrorStream()));
+    public void exec_cmd(String command) throws Exception {
+        long start = System.currentTimeMillis();
+        logger.info(command);
+        //Process process = Runtime.getRuntime().exec(command);//需要检查是否出错
+        List<String>cmd=new ArrayList<String>();
+        for(String s : command.split(" ")) {
+            cmd.add(s);
+        }
+        ProcessBuilder builder = new ProcessBuilder(cmd);
+        builder.redirectErrorStream(true);
+        Process process = builder.start();
+        BufferedReader br = new BufferedReader(new InputStreamReader(process.getInputStream()));
         String li = null;
         StringBuilder sb = new StringBuilder();
         while ((li = br.readLine()) != null) {
             sb.append(li + "\n");
         }
-        logger.info("~~~~~~~~~~~~~~~~~~~~~~~");
-        logger.info(command);
-        logger.info(sb.toString());
+        process.waitFor();
+        int exit = process.exitValue();
+        logger.info("exit code: "+exit);
+        logger.info("cost:"+(System.currentTimeMillis()-start)/1000.0);
+        if(exit!=0) {
+            logger.info(sb.toString());
+            throw new Exception("Execution Failure in Python! ");
+        }
 
     }
 
     /**
      * 调用爬虫并将结果写入到数据库
      */
-    public void get_sina_weibo(Param param,String session_id) throws IOException {
+    public void get_sina_weibo(Param param,String session_id) throws Exception {
         String save_path = rootdir+temp_path+"sina_"+session_id+".txt";
         String py_path = rootdir+python_path+search_file;
         String command = "python "+ py_path+" "+save_path;
@@ -485,7 +594,7 @@ public class DataLabelController {
     /**
      * 返回微博内容时，需要对原始微博用分类器筛选，并且去掉已经被标注过的重复微博
      */
-    public List<DataInfo> fliter(List<DataInfo> data, String tag, String session_id) throws IOException {
+    public List<DataInfo> fliter(List<DataInfo> data, String tag, String session_id,boolean selectkey) throws IOException {
         String infile = rootdir+temp_path+"temp_" + session_id + ".txt";
         String outfile = rootdir+temp_path+"out_" + session_id + ".txt";
         try {
@@ -504,29 +613,30 @@ public class DataLabelController {
             }
             file.close();
 
-            //筛选
+            //筛选,只有未选择关键词时才开启
+            if(!selectkey) {
+                String model_dir = rootdir + model_path;
+                String pyfile = rootdir + python_path + classfy_file;
+                String command = "python " + pyfile + " predict " + infile + " " + model_dir + " " + outfile;
+                //command = "python ./src/main/java/io/github/jhipster/sample/web/rest/python/test.py";
+                //        PythonInterpreter interpreter = new PythonInterpreter();
+                //        interpreter.execfile("./src/main/java/io/github/jhipster/sample/web/rest/python/test.py");
+                exec_cmd(command);
+                data = new ArrayList<DataInfo>();
+                try {
+                    InputStreamReader read = new InputStreamReader(new FileInputStream(outfile));
+                    BufferedReader bufread = new BufferedReader(read);
+                    String lines = null;
 
-            String model_dir = rootdir+model_path;
-            String pyfile = rootdir+python_path+classfy_file;
-            String command = "python " + pyfile + " predict " + infile + " " + model_dir + " " + outfile;
-            //command = "python ./src/main/java/io/github/jhipster/sample/web/rest/python/test.py";
-            //        PythonInterpreter interpreter = new PythonInterpreter();
-            //        interpreter.execfile("./src/main/java/io/github/jhipster/sample/web/rest/python/test.py");
-            exec_cmd(command);
-            data = new ArrayList<DataInfo>();
-            try {
-                InputStreamReader read = new InputStreamReader(new FileInputStream(outfile));
-                BufferedReader bufread = new BufferedReader(read);
-                String lines = null;
-
-                while ((lines = bufread.readLine()) != null) {
-                    String[] line = lines.trim().split("\t");
-                    if (line.length == 3)
-                        data.add(new DataInfo(line[0].trim(), line[1].trim(), line[2].trim()));
+                    while ((lines = bufread.readLine()) != null) {
+                        String[] line = lines.trim().split("\t");
+                        if (line.length == 3)
+                            data.add(new DataInfo(line[0].trim(), line[1].trim(), line[2].trim()));
+                    }
+                    read.close();
+                } catch (IOException e) {
+                    e.printStackTrace();
                 }
-                read.close();
-            }catch (IOException e){
-                e.printStackTrace();
             }
         }catch (Exception e)
         {
@@ -582,7 +692,7 @@ public class DataLabelController {
             if (temp.size() < 1) {
                 break;
             }
-            temp = fliter(temp, param.tag, session.getId());//筛选以及去重
+            temp = fliter(temp, param.tag, session.getId(),param.selectkey);//筛选以及去重
             dbdata.addAll(temp);
             param.page++;
         }
@@ -597,8 +707,9 @@ public class DataLabelController {
         //查不到任何数据，已经到达最后一页
         if (dbdata.size() == 0) {
             dataLabelResponse.response_code = 1;
-        } else
+        } else {
             dataLabelResponse.response_code = 0;
+        }
         dataLabelResponse.page = param.page;
         logger.info("cost:"+(System.currentTimeMillis()-now)/1000/60+" min");
         return dataLabelResponse;
@@ -1084,36 +1195,36 @@ public class DataLabelController {
      */
     @GetMapping("/Labeltrainservice")
     @ResponseBody
-    public String train( @RequestParam("train_label") String train_label,@RequestParam("train_all") boolean train_all,HttpSession session)
+    public String train(@RequestParam("train_label") String train_label,HttpSession session)
     {
         boolean result =false;
         Map status = new HashMap<String ,Boolean>();
         Gson gson = new Gson();
+        train_label=train_label.trim();
         String path = rootdir+temp_path+"train_"+session.getId()+".txt";
         try{
-            if(!labelRelationInfoDAO.exists(train_label) || train_label.trim().length()<=0)
+            if(train_label.length()<=0|| (!train_label.equals("all")&&!labelRelationInfoDAO.exists(train_label)) )
             {
                 status.put("status",false);
                 return gson.toJson(status);
             }
-            List<DataLabelInfo> dataLabelInfos = dataLabelInfoDAO.findByTag(train_label.trim());
+            List<DataLabelInfo> dataLabelInfos = dataLabelInfoDAO.findAll(Label_data_set);
 
             FileWriter file = new FileWriter(path);
             //写入该标签所有的微博到文件中
             for(int i=0;i<dataLabelInfos.size();i++)
             {
                 DataLabelInfo info = dataLabelInfos.get(i);
-                file.write(info.getKey().getSince_id()+'\t'+info.getWeibo_time()+'\t'+info.getWeibo_content()+'\t'+info.getKey().getTag()+'\n');
+                String content=info.getWeibo_content();
+                content=content.replace('\n',' ');
+                content=content.replace('\t',' ');
+                file.write(info.getKey().getSince_id()+'\t'+info.getWeibo_time()+'\t'+content+'\t'+info.getKey().getTag()+'\n');
             }
             file.close();
             String type = "retrain";
             String model_dir = rootdir+model_path;
             String pyfile = rootdir+python_path+classfy_file;
-            if(!train_all)
-            {
-                type="update";
-            }
-            String cmd = "python "+  pyfile + " "+type+" "+model_dir;
+            String cmd = "python "+  pyfile + " "+type+" "+path+" "+model_dir+" "+"+"+train_label;
             exec_cmd(cmd);
             result=true;
 
@@ -1122,10 +1233,10 @@ public class DataLabelController {
             result=false;
 
         }finally {
-            if (deletefile(path))
-                logger.info("文件" + path + "删除成功!");
-            else
-                logger.info("文件" + path + "删除失败!");
+//            if (deletefile(path))
+//                logger.info("文件" + path + "删除成功!");
+//            else
+//                logger.info("文件" + path + "删除失败!");
 
         }
         status.put("status",result);
@@ -1137,11 +1248,40 @@ public class DataLabelController {
      */
     @GetMapping("/DBlookservice")
     @ResponseBody
-    public String returnlook( @RequestParam("look_db") String look_db) {
+    public String returnlook( @RequestParam("look_db") String look_db,@RequestParam("cur_page") int cur_page,@RequestParam("per_page") int per_page) {
         Gson gson = new Gson();
         look_db=look_db.trim();
-
-        return gson.toJson("");
+        DataLabelResponse dataLabelResponse=new DataLabelResponse();
+        if(look_db.length()<=0 || cur_page<1 || per_page<1) {
+            dataLabelResponse.response_code=-1;
+            dataLabelResponse.response_str="参数不合法，请检查！";
+            return gson.toJson(dataLabelResponse);
+        }
+        look_db=look_db.split("\\(")[0].trim();
+        if(look_db.length()<=0) {
+            dataLabelResponse.response_code=-1;
+            dataLabelResponse.response_str="语料库名称不能为空！";
+            return gson.toJson(dataLabelResponse);
+        }
+        try{
+            int total_num = dataLabelInfoDAO.count(look_db);
+            dataLabelResponse.page=total_num/per_page+1;
+            if(cur_page>dataLabelResponse.page)
+                cur_page=dataLabelResponse.page;
+            List<DataLabelInfo> infos= dataLabelInfoDAO.findAllbypage(look_db,(cur_page-1)*per_page,per_page);
+            for(int i=0;i<infos.size();i++)
+            {
+                ResponseEntity responseEntity = new ResponseEntity(infos.get(i));
+                dataLabelResponse.dataset.add(responseEntity);
+            }
+        }catch (Exception e)
+        {
+            e.printStackTrace();
+            dataLabelResponse.dataset=null;
+            dataLabelResponse.response_code=-1;
+            dataLabelResponse.response_str="服务器异常！";
+        }
+        return gson.toJson(dataLabelResponse);
     }
 
 
